CORS solutions v2